feat: added styles to the file input

--- a/frontend/barks-and-bubbles-frontend/src/app/components/file-reader-component/file-reader-component.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/file-reader-component/file-reader-component.component.html
@@ -2,6 +2,6 @@
 <input type="file"> -->
 
 
-<p>Enter Client File</p>
+<p>Enter Client File:</p>
 <input type="file"
        (change)="onFileChange($event)">
