--- a/frontend/barks-and-bubbles-frontend/src/app/components/home/home.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/home/home.component.html
@@ -1,17 +1,15 @@
 <div class="title-layout">
-  <h1>Pet Clients</h1>
+  <div>
+    <h2>Pet Clients</h2>
+  </div>
 </div>
 
 <div class="layout">
   <div>
     <app-client-list></app-client-list>
-
-
   </div>
-  <app-file-reader-component></app-file-reader-component>
-</div>
 
-<div class="btn-layout">
-  <button mat-raised-button
-          color="primary">Send Texts</button>
+  <div>
+    <app-appointment-list></app-appointment-list>
+  </div>
 </div>
