--- a/frontend/barks-and-bubbles-frontend/src/app/components/home/home.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/home/home.component.scss
@@ -7,9 +7,8 @@ app-client-list {
   overflow-y: scroll;
   height: 36em;
   width: 70em;
-  margin-top: 2em;
+  margin-top: 1.5em;
   margin-right: 1em;
-  padding: 2em 0;
 }
 
 .title-layout {
@@ -17,17 +16,26 @@ app-client-list {
   justify-content: flex-start;
   margin-top: 2em;
   margin-left: 1.5em;
-  height: 1em;
+  margin-bottom: 1em;
+  height: 0.5em;
   align-items: stretch;
 }
 
 .btn-layout {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   margin-left: 1.5em;
 }
 
 button {
   margin-top: 1em;
+}
+
+@media (max-width: 1240px) {
+  div {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 45em);
+  }
 }
