--- a/frontend/barks-and-bubbles-frontend/src/styles.scss
+++ b/frontend/barks-and-bubbles-frontend/src/styles.scss
@@ -26,26 +26,40 @@ html,
 body {
   height: 100%;
   overflow-y: hidden;
-}
-body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 body::-webkit-scrollbar,
-app-client-list::-webkit-scrollbar {
+app-client-list::-webkit-scrollbar,
+.appointments-layout::-webkit-scrollbar,
+.location-layout::-webkit-scrollbar {
   width: 10px;
   height: 0px;
 }
 
 body::-webkit-scrollbar-track,
-app-client-list::-webkit-scrollbar-track {
+app-client-list::-webkit-scrollbar-track,
+.appointments-layout::-webkit-scrollbar-track,
+.location-layout::-webkit-scrollbar-track {
   background-color: #bab8b877;
   border-radius: 5px;
 }
 
 body::-webkit-scrollbar-thumb,
-app-client-list::-webkit-scrollbar-thumb {
+app-client-list::-webkit-scrollbar-thumb,
+.appointments-layout::-webkit-scrollbar-thumb,
+.location-layout::-webkit-scrollbar-thumb {
   background: rgba(0, 0, 0, 0.679);
   border-radius: 25px;
+}
+
+@media (max-width: 1200px) {
+  body {
+    overflow-y: scroll;
+  }
+}
+
+.no-scroll {
+  overflow: hidden !important;
 }
