--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.scss
@@ -18,6 +18,19 @@ mat-card {
   }
 }
 
+.error-msg {
+  background-color: #c4c4c4;
+  color: black;
+  width: 30vw;
+  border-radius: 1em;
+  margin-left: 1em;
+  height: 65vh;
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .appointment-title {
   position: relative;
   bottom: 1.1em;
@@ -40,6 +53,10 @@ mat-card {
   }
   .appointment-title {
     margin-left: 2em;
+  }
+
+  .error-msg {
+    width: 90vw;
   }
 }
 
