--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="appointments.length"
      class="appointments-layout">
   <mat-card *ngFor="let app of appointments">
-    <mat-card-title [innerHTML]="formatDate(app.date)"></mat-card-title>
+    <mat-card-title [innerHTML]="formatDate(app.date, false)"></mat-card-title>
     <mat-card-content>
       <p [ngClass]="{'location-layout' : app.location.length >= 2, 'no-scroll': app.location.length < 2}">
         {{formatLocations(app.location)}}</p>
@@ -12,8 +12,10 @@
     <mat-card-actions align="end">
       <button mat-icon-button
               color="primary"
-              matTooltip="Send appointment texts"><mat-icon><span class="material-symbols-outlined">
-            outgoing_mail
+              matTooltip="View Appointment"
+              (click)="this.router.navigate(['appointment/', app.id])"><mat-icon><span
+                class="material-symbols-outlined">
+            arrow_circle_right
           </span></mat-icon></button>
     </mat-card-actions>
   </mat-card>
