fix: fixed typo in navbar

--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.html
@@ -14,7 +14,7 @@
           </span></mat-icon>
       </button>
       <button mat-icon-button
-              matTooltip="Add Appointments"
+              matTooltip="Add Appointment"
               (click)="showPanel($event, false)">
         <mat-icon>alarm</mat-icon>
       </button>
