fix: added extra flag to be more specfic with the date formating

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="appointments.length"
      class="appointments-layout">
   <mat-card *ngFor="let app of appointments">
-    <mat-card-title [innerHTML]="formatDate(app.date, false)"></mat-card-title>
+    <mat-card-title [innerHTML]="formatDate(app.date, false, false)"></mat-card-title>
     <mat-card-content>
       <p [ngClass]="{'location-layout' : app.location.length >= 2, 'no-scroll': app.location.length < 2}">
         {{formatLocations(app.location)}}</p>
