feat: added logo and replaced faicon with logo

--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.html
@@ -1,7 +1,14 @@
 <div (click)="hidePanels()">
   <mat-toolbar color="primary">
     <div (click)="this.DataService.goHome()"
-         style="cursor: pointer;">
+         style="cursor: pointer;
+         display: flex;
+         flex-wrap: nowrap;
+         align-items: center;
+         margin-bottom: 0.15em;">
+      <img class="logo"
+           src="../assets/logo.png"
+           alt="">
       <span>Barks and Bubbles</span>
     </div>
 
