--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.scss
@@ -4,6 +4,8 @@ mat-toolbar {
   z-index: 20;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  align-content: center;
 
   div {
     button {
@@ -42,4 +44,9 @@ form {
   position: absolute;
   z-index: 10;
   box-shadow: 3px 3px 3px #afafaf;
+}
+
+.logo {
+  object-fit: contain !important;
+  height: 3.75em;
 }
