feat: added panels, updated global styles and fixed issue with the date formatting

--- a/frontend/barks-and-bubbles-frontend/src/styles.scss
+++ b/frontend/barks-and-bubbles-frontend/src/styles.scss
@@ -152,3 +152,16 @@ app-client-list::-webkit-scrollbar-thumb,
 .no-scroll {
   overflow: hidden !important;
 }
+
+.error-msg {
+  background-color: #c4c4c4;
+  color: black;
+  width: 30vw;
+  border-radius: 1em;
+  margin-left: 1em;
+  height: 65vh;
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
