--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
@@ -1,44 +1,70 @@
-<mat-card>
-  <mat-card-title>
-    <h2 [innerHTML]="this.DataService.formatDate(appointment.date ,false)">TITLE</h2>
-    <button mat-icon-button
-            color="primary"
-            matTooltip="Send Appointment Texts"
-            (click)="openPanel()">
-      <mat-icon>
-        <span class="material-symbols-outlined">
-          outgoing_mail
-        </span>
-      </mat-icon>
-    </button>
+<div class="layout">
+  <mat-card class="message-list">
+    <mat-card-title>
+      <h2 [innerHTML]="this.DataService.formatDate(appointment.date ,false, false)">TITLE</h2>
+      <button mat-icon-button
+              color="primary"
+              matTooltip="Send Appointment Texts"
+              (click)="openPanel()"
+              [disabled]="this.appointment.messages && this.appointment.messages.sentDate">
+        <mat-icon>
+          <span class="material-symbols-outlined">
+            outgoing_mail
+          </span>
+        </mat-icon>
+      </button>
+    </mat-card-title>
 
-    <button mat-icon-button
-            color="accent"
-            matTooltip="Load Responses">
-      <mat-icon>
-        <span class="material-symbols-outlined">
-          sync
-        </span>
-      </mat-icon>
-    </button>
-  </mat-card-title>
-
-  <div class="scroll location-layout">
-    <div *ngFor="let location of this.appointment.location">
-      <div *ngFor="let local of getObjectKeys(location)">
-        <div class="location-title">
-          <h3><b>{{ local }} ({{getNumOfClients(location)}})</b></h3>
-          <hr>
-        </div>
-        <div *ngFor="let clientArr of getObjectValue(location)"
-             class="client-cards-container">
-          <mat-card *ngFor="let client of clientArr"
-                    class="client-card">
-            <mat-icon>pets</mat-icon>{{client.petName}}
-            <mat-icon>face</mat-icon>{{client.petParentName}}
-          </mat-card>
+    <div class="scroll location-layout">
+      <div *ngFor="let location of this.appointment.location">
+        <div *ngFor="let local of getObjectKeys(location)">
+          <div class="location-title">
+            <h3><b>{{ local }} ({{getNumOfClients(location)}})</b></h3>
+            <hr>
+          </div>
+          <div *ngFor="let clientArr of getObjectValue(location)"
+               class="client-cards-container">
+            <mat-card *ngFor="let client of clientArr"
+                      class="client-card">
+              <mat-icon>pets</mat-icon>{{client.petName}}
+              <mat-icon>face</mat-icon>{{client.petParentName}}
+            </mat-card>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</mat-card>
+  </mat-card>
+
+  <mat-card class="reply-list">
+    <mat-card-title>SMS Replies
+      <button mat-icon-button
+              color="accent"
+              matTooltip="Load Responses"
+              [disabled]="!hasMessageSent()"
+              (click)="
+            loadReplies()"
+              [ngClass]="{'rotate-image': this.loadingReplies}">
+        <mat-icon>
+          <span class="material-symbols-outlined">
+            sync
+          </span>
+        </mat-icon>
+      </button>
+    </mat-card-title>
+
+    <mat-card-content>
+
+      <div *ngIf="hasMessageSent()"
+           style="margin-top: 1em;">
+        <h2 class="error-msg"
+            style="width: 100%;">Please load responses to see who replied</h2>
+      </div>
+
+      <div *ngIf="!hasMessageSent()"
+           style="margin-top: 1em;">
+        <h2 class="error-msg"
+            style="width: 100%;">Appointment Messages not sent</h2>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
