--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.scss
@@ -1,4 +1,15 @@
-mat-card {
+.layout {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+.reply-list {
+  width: 95%;
+  height: 43em;
+  padding: 2em;
+  margin: 1em;
+}
+.message-list {
   width: 35em;
   height: 43em;
   padding: 2em;
@@ -19,11 +30,13 @@ mat-card {
   .client-cards-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    row-gap: 1em;
   }
   .client-card {
     width: 12em;
     height: 12em;
     padding: 2em;
+    margin-bottom: 1em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,4 +57,17 @@ mat-card {
   top: 0;
   background-color: white;
   z-index: 20;
+}
+
+.rotate-image {
+  animation: rotate 1s linear infinite; /* Adjust the duration (5s) as needed */
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
