--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.scss
@@ -1,12 +1,20 @@
-mat-toolbar {
+nav {
   position: sticky;
   top: 0;
   z-index: 20;
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
+  height: 5em;
+  align-items: center;
 
-  height: 4em;
+  h2 {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    margin: 0.5em 0.1em;
+  }
 
   div {
     button {
@@ -49,6 +57,6 @@ form {
 
 .logo {
   object-fit: contain !important;
-  height: 4.15em;
+  height: 5.25em;
   padding: 1em 0.15em;
 }
