fix: fixed styling issues related to navbar responsiveness

--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.html
@@ -15,7 +15,7 @@
     </a>
   </div>
 
-  <div class="collapse navbar-collapse">
+  <div class="button-layout">
     <button mat-icon-button
             matTooltip="Add Clients"
             (click)="showPanel($event, true)">
