--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.scss
@@ -16,6 +16,10 @@ nav {
     margin: 0.5em 0.1em;
   }
 
+  .button-layout {
+    display: flex;
+  }
+
   div {
     button {
       margin-right: 2em;
