--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.scss
@@ -38,12 +38,8 @@
     padding: 2em;
     margin-bottom: 1em;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-
-    mat-icon {
-      padding: 0.5em;
-    }
   }
 }
 
@@ -70,4 +66,72 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.messages-layout {
+  overflow-y: scroll;
+  height: 35em;
+}
+
+.client-name {
+  position: sticky;
+  top: -1px;
+  z-index: 5;
+  background-color: white;
+  border-bottom: #9a9a9a solid 1px;
+  padding-bottom: 1em;
+}
+
+.message {
+  max-width: 70%; /* Adjust as needed */
+  margin: 10px;
+  padding: 15px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  align-content: center;
+
+  sub {
+    color: grey;
+  }
+}
+
+.sent {
+  background-color: #dcf8c6; /* Light green for sent messages */
+  align-self: flex-end; /* Align sent messages to the right */
+}
+
+.unsent {
+  background-color: #f8c6c6; /* Light green for sent messages */
+  align-self: flex-end; /* Align sent messages to the right */
+}
+.received {
+  background-color: #e0e0e0; /* Light gray for received messages */
+  align-self: flex-start; /* Align received messages to the left */
+}
+
+.message p {
+  margin: 0;
+  padding: 0;
+}
+
+.panel-container {
+  position: fixed;
+  top: 5em;
+  right: 0;
+  width: 50%;
+  height: 45em;
+  background-color: #f0f0f0;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+  z-index: 50;
+  border-radius: 3px;
+}
+
+.panel {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 50;
 }
