--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.scss
@@ -50,7 +50,7 @@
 
 .location-title {
   position: sticky;
-  top: 0;
+  top: -1px;
   background-color: white;
   z-index: 20;
 }
@@ -83,9 +83,10 @@
 }
 
 .message {
-  max-width: 70%; /* Adjust as needed */
+  min-width: 15em;
+  max-width: 20em; /* Adjust as needed */
   margin: 10px;
-  padding: 15px;
+  padding: 5px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -95,6 +96,7 @@
 
   sub {
     color: grey;
+    margin-right: 10px;
   }
 }
 
@@ -109,12 +111,7 @@
 }
 .received {
   background-color: #e0e0e0; /* Light gray for received messages */
-  align-self: flex-start; /* Align received messages to the left */
-}
-
-.message p {
-  margin: 0;
-  padding: 0;
+  align-self: flex-end; /* Align received messages to the left */
 }
 
 .panel-container {
