refactor: removed comment

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.scss
@@ -84,7 +84,7 @@
 
 .message {
   min-width: 15em;
-  max-width: 20em; /* Adjust as needed */
+  max-width: 20em;
   margin: 10px;
   padding: 5px;
   border-radius: 10px;
