feat: added error message class styles to no replies message in appointment scheduler

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.html
@@ -47,7 +47,8 @@
        (dragover)="onDragOver($event)"
        (touchmove)="onDragOver($event)"
        (drop)="onDrop($event, null)"
-       (touchend)="onDrop($event, null)">No Replies</p>
+       (touchend)="onDrop($event, null)"
+       class="no-replies">No Replies</p>
 
   </div>
   <div class="hours scroll">
