--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
@@ -62,9 +62,41 @@
               (click)="this.togglePanel($event, false)">
         <mat-icon>event_upcoming</mat-icon>
       </button>
+
+      <button mat-icon-button
+              color="warn"
+              (click)="showErrorPanel = true"
+              *ngIf="this.appointment && this.appointment.replies && getFailedMessages().length">
+        <mat-icon color="warn"
+                  matBadgeColor="primary"
+                  aria-hidden="false"
+                  matBadge="{{getFailedMessages().length}}">error</mat-icon>
+      </button>
+
+      <div class="panel-layout scroll scroll-margin"
+           *ngIf="showErrorPanel">
+        <h2 class="error-title">Messages with
+          Errors:</h2>
+
+
+        <ng-container *ngFor="let message  of getFailedMessages(); index as i"
+                      style="width: 10em;">
+          <h3>{{i+1}}. Tried sending to: {{formatNumber(message.to)}}</h3>
+
+          <mat-card class="message error-message unsent">
+            <mat-card-content>
+              <p>{{message.body}}</p>
+            </mat-card-content>
+            <mat-card-footer align="end">
+              <sub>{{formatStatus(message.status)}} -
+                {{this.DataService.messageDateFormat(message.dateUpdated)}}</sub>
+            </mat-card-footer>
+          </mat-card>
+        </ng-container>
+      </div>
     </mat-card-title>
 
-    <mat-card-content>
+    <mat-card-content (click)="showErrorPanel ? showErrorPanel = false: true">
 
       <div *ngIf="hasMessageSent()"
            style="margin-top: 1em;">
