feat: added scroll-margin class to global styles for scroll bars that need space around it

--- a/frontend/barks-and-bubbles-frontend/src/styles.scss
+++ b/frontend/barks-and-bubbles-frontend/src/styles.scss
@@ -134,6 +134,10 @@ app-client-list::-webkit-scrollbar-track,
   border-radius: 5px;
 }
 
+.scroll-margin::-webkit-scrollbar-track {
+  margin: 1em 0;
+}
+
 body::-webkit-scrollbar-thumb,
 app-client-list::-webkit-scrollbar-thumb,
 .appointments-layout::-webkit-scrollbar-thumb,
