--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.scss
@@ -93,7 +93,7 @@
   flex-wrap: wrap;
   align-items: flex-end;
   align-content: center;
-
+  align-self: flex-end;
   sub {
     color: grey;
     margin-right: 10px;
@@ -101,17 +101,15 @@
 }
 
 .sent {
-  background-color: #dcf8c6; /* Light green for sent messages */
-  align-self: flex-end; /* Align sent messages to the right */
+  background-color: #dcf8c6;
 }
 
 .unsent {
-  background-color: #f8c6c6; /* Light green for sent messages */
-  align-self: flex-end; /* Align sent messages to the right */
+  background-color: #f8c6c6;
 }
 .received {
-  background-color: #e0e0e0; /* Light gray for received messages */
-  align-self: flex-end; /* Align received messages to the left */
+  background-color: #e0e0e0;
+  left: 22vw;
 }
 
 .panel-container {
